# AlphaLab

./: .gitignore  AlphaLab.ipynb  Earnings_Q&A.ipynb  README.md  app.py  pyproject.toml  requirements.txt
data/: fundamentals.csv  sp500_market_caps.csv
notebooks/: research.ipynb
src/alphalab/: __init__.py  __main__.py  backtest.py  config.py  data.py  factors.py  metrics.py  pipeline.py  plotting.py  selection.py
